2015-09-25  Christoph Mathys  <eraserix@gmail.com>

	* 36626: Completion/Unix/Command/_hg: _hg: completion for
	'hg bookmarks'

2015-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 36630: Doc/Zsh/contrib.yo, Doc/Zsh/manual.yo,
	Functions/Chpwd/zsh_directory_name_generic: new helper function.

2015-09-24  Barton E. Schaefer  <schaefer@zsh.org>

	* 36623: Doc/Zsh/contrib.yo: document bracketed-paste-magic and
	url-quote-magic; add cross-reference to vim text object widgets

2015-09-24  Mikael Magnusson  <mikachu@gmail.com>

	* 36603: Src/glob.c: fix dirfd leak during Y shortcut qualifier

2015-09-24  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_hg: Declare $expl as an array

2015-09-24  Christoph Mathys  <eraserix@gmail.com>

	* 36613: Completion/Unix/Command/_hg: extend completion for hg
	push to support branch and bookmark

2015-09-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 36604: Functions/Misc/zrecompile: fix getopts+shift calculation

2015-09-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/compmatch.c: Followup to 36586: Change C99
	comment syntax to the C89 syntax.

2015-09-23  Mikael Magnusson  <mikachu@gmail.com>

	* Eric Cook: 36571: Completion/Linux/Command/_losetup,
	Completion/Zsh/Command/_zsocket: Completion for zsocket and
	updated losetup's completion

2015-09-22  Barton E. Schaefer  <schaefer@zsh.org>

	* 36587: Functions/Zle/edit-command-line: use +LINE:COLUMN to
	place the cursor when invoking emacs variants, for emacsclient

2015-09-22  Peter Stephenson  <p.stephenson@samsung.com>

	* 36586: Han Pingtian: Src/Zle/compmatch.c: tweak to completion
	matching with right anchor.

	* 36545: Han Pingtian: Doc/Zsh/compwid.yo: tweak doc for match
	anchors e and E.

	* 36538: Han Pingtian: Doc/Zsh/compwid.yo: tweak doc for match
	anchors to get correct difference between b and B.

2015-09-22  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
