@@ -1,3 +1,8 @@
+2015-09-25  Daniel Shahaf  <d.s@daniel.shahaf.name>
+
+	* unposted: Src/Zle/zle_tricky.c Src/Zle/zle_utils.c: zle:
+	Document the C helper function processcmd().
+
 2015-09-25  Christoph Mathys  <eraserix@gmail.com>
 
 	* 36626: Completion/Unix/Command/_hg: _hg: completion for
